Bug 1101124 - Check for a pref to always stop slow scripts r=bz